--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Shared/_Layout.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Shared/_Layout.cshtml
@@ -183,10 +183,16 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("MostrarServicios","Servicio")">
+                    <span>Servicios</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("MostrarUsuarios","Usuario")">
                     <span>Usuario</span>
                 </a>
             </li>
+
         </ul>
     </aside><!-- End Sidebar-->
 
