--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/MostrarCitas.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/MostrarCitas.cshtml
@@ -168,7 +168,8 @@
         $('#myDataTable').DataTable({
             language: {
                 url: '//cdn.datatables.net/plug-ins/2.0.2/i18n/es-ES.json',
-            }
+            },
+            ordering: false // Desactiva el ordenamiento inicial
         });
     });
     function filtrarTodos() {
