--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Home/Index.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
-﻿<div class="pagetitle">
+﻿
+@{
+    var errorMessage = TempData["ErrorMessage"] as string;
+}
+
+<div class="pagetitle">
     <h1>Dashboard</h1>
 
 </div><!-- End Page Title -->
@@ -26,16 +31,10 @@
 
 <section class="section dashboard">
     <div class="row">
-
-        <!-- Left side columns -->
         <div class="col-lg-12">
             <div class="row">
-
-                <!-- Sales Card -->
                 <div class="col-xxl-4 col-md-6">
                     <div class="card info-card sales-card">
-
-
 
                         <div class="card-body">
                             <h5 class="card-title">Citas </h5>
@@ -49,33 +48,24 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
-                </div><!-- End Sales Card -->
-                <!-- Revenue Card -->
+                </div>
                 <div class="col-xxl-4 col-md-6">
                     <div class="card info-card revenue-card">
-
-
                         <div class="card-body">
                             <h5 class="card-title">Carros</h5>
-
                             <div class="d-flex align-items-center">
                                 <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                                     <i class="ri ri-car-fill"></i>
                                 </div>
                                 <div class="ps-3">
                                     <h6>@ViewBag.CantAutos</h6>
-
-
-
                                 </div>
                             </div>
                         </div>
 
                     </div>
-                </div><!-- End Revenue Card -->
-                <!-- Customers Card -->
+                </div>
                 <div class="col-xxl-4 col-xl-12">
 
                     <div class="card info-card customers-card">
@@ -89,74 +79,83 @@
                                 </div>
                                 <div class="ps-3">
                                     <h6>@ViewBag.CantClientes</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr style="padding: 12px">
+                <div class="row">
+                    <div class="col-md-3 d-flex flex-column align-items-center">
+                        <a class="btn btn-success mb-2" href="@Url.Action("TraerTodoDocker", "Reporte")">EXCEL TOTAL CITAS</a>
 
+                        @using (Html.BeginForm("TraerTodoDockerSegunFecha", "Reporte", FormMethod.Get))
+                        {
+                            <div class="form-group my-3">
+                                <input type="date" name="fecha" class="form-control" required />
+                            </div>
 
+                            <input type="submit" class="btn btn-success" value="EXCEL SEGÚN FECHA">
+                        }
+                    </div>
 
+                    <div class="col-md-9 ml-auto">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h3>SELECCIONAR SUCURSAL</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        @using (Html.BeginForm("TraerTodoDockerSegunSucursal", "Reporte", FormMethod.Get))
+                                        {
+                                            <div class="form-group my-3 text-center">
+                                                @Html.Label("Seleccione una sucursal", new { @class = "my-3" })
+                                                @Html.DropDownList("idSucursal", ViewBag.Sucursales as List<SelectListItem>, new { @class = "form-control form-control-user", @required = "true" })
+                                                @Html.ValidationMessage("idSucursal", "", new { @class = "text-danger" })
+                                            </div>
+
+                                            <div style="display: flex; align-items: center; flex-direction: column;">
+                                                <input type="submit" class="btn btn-primary btn-block" value="EXCEL SUCURSAL" style="margin-top: 20px; margin-bottom: 20px;">
+                                            </div>
+                                        }
+                                    </div>
                                 </div>
                             </div>
 
+                            <!-- Segundo Card -->
+                            <div class="col-md-6">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h3>SELECCIONAR MESES</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        @using (Html.BeginForm("TraerTodoDockerSegunMes", "Reporte", FormMethod.Get))
+                                        {
+                                            <div class="form-group my-3 text-center">
+                                                @Html.Label("Seleccione un Mes", new { @class = "my-3" })
+                                                @Html.DropDownList("Mes", ViewBag.Meses as List<SelectListItem>, new { @class = "form-control form-control-user", @required = "true" })
+                                                @Html.ValidationMessage("mes", "", new { @class = "text-danger" })
+
+                                                <!-- Mostrar el mensaje de error si existe -->
+                                                @if (!string.IsNullOrEmpty(errorMessage))
+                                                {
+                                                    <div class="text-danger">
+                                                        @errorMessage
+                                                    </div>
+                                                }
+                                            </div>
+
+                                            <div style="display: flex; align-items: center; flex-direction: column;">
+                                                <input type="submit" class="btn btn-primary btn-block" value="Generar Reporte" style="margin-top: 20px; margin-bottom: 20px;">
+                                            </div>
+                                        }
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-
-                </div>
-
-                <div class="row">
-                    <div class="col-md-3">
-                        <a class="btn btn-success">EXCEL TOTAL CITAS</a>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3>Seleccione una sucursal</h3>
-                            </div>
-                            <div class="card-body">
-                                @using (Html.BeginForm("docker", "Reporte", FormMethod.Get))
-                                {
-                                    <div class="form-group my-3 text-center">
-                                        @Html.Label("Seleccione una sucursal", new { @class = "my-3" })
-                                        @Html.DropDownList("idSucursal", ViewBag.Sucursales as List<SelectListItem>, new { @class = "form-control form-control-user", @required = "true" })
-                                        @Html.ValidationMessage("idSucursal", "", new { @class = "text-danger" })
-                                    </div>
-
-                                    <div style="display: flex; align-items: center; flex-direction: column;">
-                                        <input type="submit" class="btn btn-primary btn-block" value="EXCEL SUCURSAL" style="margin-top: 20px; margin-bottom: 20px;">
-                                    </div>
-                                }
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3>CARGAR MESES POR DROPDOWN</h3>
-                            </div>
-                            <div class="card-body">
-                                @using (Html.BeginForm("docker", "Reporte", FormMethod.Get))
-                                {
-                                    <div class="form-group my-3 text-center">
-                                        @Html.Label("CARGAR MESES POR DROPDOWN", new { @class = "my-3" })
-                                        @Html.DropDownList("idSucursal", ViewBag.Sucursales as List<SelectListItem>, new { @class = "form-control form-control-user", @required = "true" })
-                                        @Html.ValidationMessage("idSucursal", "", new { @class = "text-danger" })
-                                    </div>
-
-                                    <div style="display: flex; align-items: center; flex-direction: column;">
-                                        <input type="submit" class="btn btn-primary btn-block" value=" EXCEL MES" style="margin-top: 20px; margin-bottom: 20px;">
-                                    </div>
-                                }
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <input type="date"/>
-                        <a class="btn btn-success">EXCEL TOTAL CITAS</a>
                     </div>
                 </div>
-
-
-
-            </div><!-- End Right side columns -->
-    </div>
+            </div>
+        </div>
 </section>
