--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Servicio/MostrarServicios.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Servicio/MostrarServicios.cshtml
@@ -7,7 +7,7 @@
 
 <div class="card shadow mb-4" style="margin-top: 86px;">
     <div class="card-header py-3" style="display: flex; justify-content: space-between; align-items: center;">
-        <h6 class="m-0 font-weight-bold text-primary" style="text-transform: uppercase; letter-spacing: 5px; font-size: 26px;">Automoviles</h6>
+        <h6 class="m-0 font-weight-bold text-primary" style="text-transform: uppercase; letter-spacing: 5px; font-size: 26px;">Servicios</h6>
         <div>
             <a class="btn btn-primary" href="@Url.Action("NuevoServicio", "Servicio")"> + Agregar</a>
         </div>
