--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/MostrarCitas.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/MostrarCitas.cshtml
@@ -57,9 +57,6 @@
 </div>
 
 <div class="card shadow mb-4">
-    <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">Sucursal</h6>
-    </div>
     <div class="card-body">
         <div class="table-responsive">
             <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
@@ -75,11 +72,18 @@
 
 
 
-                        <div style="margin-bottom:1%; text-align:right">
-                            <a class="btn btn-primary" href="@Url.Action("NuevoCita", "Cita")"> + Agregar</a>
-                            <button class="btn btn-secondary mx-2" onclick="ordenarPorHora()">Ordenar por Hora</button>
-                            <button class="btn btn-secondary" onclick="ordenarPorNombre()">Ordenar por Nombre</button>
+                        <div style="margin: 13px; display: flex; justify-content: space-between; align-items: center; padding: 0; gap: 2px">
+                            <div style="flex: 1; padding: 0;">
+                                <a class="btn btn-primary" href="@Url.Action("NuevoCita", "Cita")" style="width: 100%; margin: 0;"> + Agregar</a>
+                            </div>
+                            <div style="flex: 1; padding: 0;">
+                                <button class="btn btn-secondary" onclick="ordenarPorHora()" style="width: 100%; margin: 0;">Ordenar por Hora</button>
+                            </div>
+                            <div style="flex: 1; padding: 0;">
+                                <button class="btn btn-secondary" onclick="ordenarPorNombre()" style="width: 100%; margin: 0;">Ordenar por Nombre</button>
+                            </div>
                         </div>
+
 
                         <table id="myDataTable" class="table table-bordered" style="width: 100%;">
                             <thead>
