--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/NuevoCita.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/NuevoCita.cshtml
@@ -13,7 +13,7 @@
             <div class="card-body" style="margin-top: 20px;">
                 <div class="table-responsive">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                        <h3>Editar Cita</h3>
+                        <h3>Agregar Cita</h3>
                         <hr />
                         @if (ViewBag.MsjPantalla != null)
                         {
