--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/EditarCita.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cita/EditarCita.cshtml
@@ -67,7 +67,7 @@
                            
 
                             <div style="display: flex; align-items: center; flex-direction: column;">
-                                <input type="submit" class="btn btn-primary btn-block" value="Actualizar Sucursal" style="margin-top: 20px; margin-bottom: 20px;">
+                                <input type="submit" class="btn btn-primary btn-block" value="Actualizar Cita" style="margin-top: 20px; margin-bottom: 20px;">
                             </div>
                         }
                     </div>
