--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/MostrarUsuarios.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Usuario/MostrarUsuarios.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "ConsultarUsuario";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var nombreUsuarioSesion = Session["NombreUsuario"] as string;
 }
 
 <div class="card shadow mb-4" style="margin-top: 86px;">
@@ -47,23 +48,25 @@
                                         <td>@item.emailUsuario</td>
                                         <td>@item.nombreRol</td>
 
-                                        @if (item.estado)
-                                        {
-                                            <td>Activo</td>
-                                        }
-                                        else
-                                        {
-                                            <td>Inactivo</td>
-                                        }
+                                        <td>
+                                            @(item.estado ? "Activo" : "Inactivo")
+                                        </td>
                                         @if (Session["RolUsuario"].ToString() == "1")
                                         {
-                                            <td>
-                                                <div style="text-align:center">
-                                                    <a href="@Url.Action("ActualizarUsuario", "Usuario", new { id = @item.idUsuario })" class="btn btn-sm btn-info"><i class="fa fa-pencil-square-o"></i></a>
-                                                    <a href="@Url.Action("InactivarUsuario", "Usuario", new { id = @item.idUsuario })" class="btn btn-sm btn-warning"><i class="fa fa-ban"></i></a>
-                                                    <a href="@Url.Action("EliminarUsuario", "Usuario", new { id = @item.idUsuario })" class="btn btn-sm btn-danger mx-1"><i class="fa fa-trash"></i></a>
-                                                </div>
-                                            </td>
+                                            if (item.nombreUsuario == nombreUsuarioSesion)
+                                            {
+                                                <td></td>
+                                            }
+                                            else
+                                            {
+                                                <td>
+                                                    <div style="text-align:center">
+                                                        <a href="@Url.Action("ActualizarUsuario", "Usuario", new { id = item.idUsuario })" class="btn btn-sm btn-info"><i class="fa fa-pencil-square-o"></i></a>
+                                                        <a href="@Url.Action("InactivarUsuario", "Usuario", new { id = item.idUsuario })" class="btn btn-sm btn-warning"><i class="fa fa-ban"></i></a>
+                                                        <a href="@Url.Action("EliminarUsuario", "Usuario", new { id = item.idUsuario })" class="btn btn-sm btn-danger mx-1"><i class="fa fa-trash"></i></a>
+                                                    </div>
+                                                </td>
+                                            }
                                         }
                                     </tr>
                                 }
